--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -3,10 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Portfolio-Gonzalo Corradi</title>
+    <link rel="stylesheet" href="/public/css/style.css">
 </head>
 <body>
-    <h1>Hola! Soy Gonzalo</h1>
-    <p>Bienvenido a mi Portfolio</p>
-</body>
+    <!-- Header -->
+
+    <header>
+        <nav>
+            <ul class="nav.links">
+                <li><a href="/">Inicio</a></li>
+                <li><a href="#about">Sobre mí</a></li>
+                <li><a href="#proyectos">Proyectos</a></li>
+                <li><a href="#contact">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!--Main-->
+    <main>
+        <!-- SOBRE MI-->
+        <section id="about" class="about.me">
+            <h1>Hola, soy <span class="highlight">Gonzalo Corradi</span> 👋</h1>
+        <p>
+        Actualmente estudio <strong>Ingeniería en Sistemas de Información en la UTN</strong> 
+        y me estoy formando como <strong>desarrollador Full Stack</strong>.
+        </p>
+        <p>
+        Tengo experiencia con <strong>JavaScript, Node.js, Express, MongoDB, HTML5 y CSS3</strong>, 
+        además de conocimientos en <strong>Python, Prolog, Haskell, Pharo</strong>, manejo de 
+        <strong>Excel</strong> y uso de la <strong>consola de Linux</strong>.
+        </p>
+        <p>
+        Busco mi <strong>primer experiencia laboral en IT</strong>, con el objetivo de seguir aprendiendo, 
+        crecer profesionalmente y aportar valor en proyectos reales.  
+        Me destaco por mi <strong>capacidad de aprendizaje rápido, organización y trabajo en equipo</strong>.
+        </p>
+        </section>
+
+        <!-- PROYECTOS -->
+        <section id="projects" class="projects">
+            <h2>Mis Proyectos</h2>
+            <h2>Proximamete se podran ver aca algunos de mis trabajos!</h2>
+        </section>
+
+        <!--Contacto -->
+
+        <section id="contact" class="contact">
+            <h2>Contacto</h2>
+            <p>Podes escribirme a: corradigonzalo9@gmail.com</p>
+            <p>Tambien me encontras en todas mis redes como: Gonzalo Corradi.</p>
+            <p>LinkedIn: </p>
+        </section>
+    </main>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Gonzalo Corradi - Todos los derechos reservados </p>
+    </footer>
+</body> 
 </html>
