--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio de Gonzalo Corradi</title>
+    <title>Portfolio-Gonzalo Corradi</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    {{{body}}}
+    <header>
+        <nav>
+            <h1>Gonzalo Corradi</h1>
+            <ul>
+                <li><a href="/">Inicio</a></li>
+                <li><a href="/proyectos">Proyectos</a></li>
+                <li><a href="/contacto">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+
+   <!-- Contenido principal -->
+    <main>
+        {{{body}}}
+    </main>
+
+    <!--Footer-->
+    <footer>
+        <p>&copy;2025 Gonzalo Corradi - Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
